# machining_force_analyzer

./: CMakeLists.txt  CMakePresets.json  README.md  build.bat  imgui.ini
include/: Common.h
include/Simulator/: simulator.h
include/force/: ForceModel.h
include/gcode/: GCodeParser.h
include/renderer/: Renderer.h  VoxelRenderer.h
include/toolpath/: ToolpathEngine.h
include/ui/: UIManager.h
include/voxel/: VoxelGrid.h
src/: main.cpp
src/force/: ForceModel.cpp
src/gcode/: GCodeParser.cpp
src/renderer/: Renderer.cpp  VoxelRenderer.cpp  VoxelShader.glsl
src/simulator/: simulator.cpp
src/toolpath/: ToolpathEngine.cpp
src/ui/: UIManager.cpp
src/voxel/: VoxelGrid.cpp
tests/: test.nc
